[workspace]
resolver = "2"
members = [
    "crates/ibc",
    "crates/ibc-data-types",
    "crates/ibc-primitives",
    "crates/ibc-core",
    "crates/ibc-apps",
    "crates/ibc-derive",
    "crates/ibc-testkit",
    "crates/ibc-query",
    "crates/ibc-core/ics02-client",
    "crates/ibc-core/ics02-client/types",
    "crates/ibc-core/ics03-connection",
    "crates/ibc-core/ics03-connection/types",
    "crates/ibc-core/ics04-channel",
    "crates/ibc-core/ics04-channel/types",
    "crates/ibc-core/ics23-commitment/types",
    "crates/ibc-core/ics24-host",
    "crates/ibc-core/ics24-host/types",
    "crates/ibc-core/ics24-host/tendermint",
    "crates/ibc-core/ics25-handler",
    "crates/ibc-core/ics25-handler/types",
    "crates/ibc-core/ics26-routing",
    "crates/ibc-core/ics26-routing/types",
    "crates/ibc-apps/ics20-transfer",
    "crates/ibc-apps/ics20-transfer/types",
    "crates/ibc-clients/ics07-tendermint",
    "crates/ibc-clients/ics07-tendermint/types",
    "crates/ibc-derive",
    "crates/ibc-testkit",
    "crates/ibc-query",
    "crates/ibc-clients",
]
exclude = [
    "ci/cw-check",
    "ci/no-std-check",
]

[workspace.package]
version      = "0.47.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.64"
readme       = "README.md"
repository   = "https://github.com/cosmos/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]

[workspace.dependencies]
# external dependencies
borsh               = {version = "0.10", default-features = false }
bytes               = { version = "1.5.0", default-features = false }
displaydoc          = { version = "0.2", default-features = false }
derive_more         = { version = "0.99.17", default-features = false, features = ["from", "into", "display", "try_into"] }
env_logger          = "0.10.0"
num-traits          = { version = "0.2.17", default-features = false }
parking_lot         = { version = "0.12.1", default-features = false }
primitive-types     = { version = "0.12.2", default-features = false, features = ["serde_no_std"] }
prost               = { version = "0.12", default-features = false }
rstest              = "0.18.2"
schemars            = { version = "0.8.15" }
sha2                = { version = "0.10.8", default-features = false }
serde               = { version = "1.0", default-features = false }
serde_derive        = { version = "1.0", default-features = false }
serde_json          = { package = "serde-json-wasm", version = "1.0.0" , default-features = false }
subtle-encoding     = { version = "0.5", default-features = false }
test-log            = { version = "0.2.13", features = ["trace"] }
time                = { version = ">=0.3.0, <0.3.31", default-features = false }
tracing             = { version = "0.1.40", default-features = false }
tracing-subscriber  = { version = "0.3.17", features = ["fmt", "env-filter", "json"] }
typed-builder       = { version = "0.18.0" }

# ibc dependencies
ibc                 = { version = "0.47.0", path = "./crates/ibc", default-features = false }
ibc-apps            = { version = "0.47.0", path = "./crates/ibc-apps", default-features = false }
ibc-core            = { version = "0.47.0", path = "./crates//ibc-core", default-features = false }
ibc-primitives      = { version = "0.47.0", path = "./crates/ibc-primitives", default-features = false }
ibc-testkit         = { version = "0.47.0", path = "./crates/ibc-testkit" }
ibc-derive          = { version = "0.3.0", path = "./crates/ibc-derive" }

ibc-core-client     = { version = "0.47.0", path = "./crates/ibc-core/ics02-client", default-features = false }
ibc-core-connection = { version = "0.47.0", path = "./crates/ibc-core/ics03-connection", default-features = false }
ibc-core-channel    = { version = "0.47.0", path = "./crates/ibc-core/ics04-channel", default-features = false }
ibc-core-host       = { version = "0.47.0", path = "./crates/ibc-core/ics24-host", default-features = false }
ibc-core-handler    = { version = "0.47.0", path = "./crates/ibc-core/ics25-handler", default-features = false }
ibc-core-router     = { version = "0.47.0", path = "./crates/ibc-core/ics26-routing", default-features = false }
ibc-app-transfer    = { version = "0.47.0", path = "./crates/ibc-apps/ics20-transfer", default-features = false }

ibc-core-client-context   = { version = "0.47.0", path = "./crates/ibc-core/ics02-client/context", default-features = false }
ibc-core-client-types     = { version = "0.47.0", path = "./crates/ibc-core/ics02-client/types", default-features = false }
ibc-core-channel-types    = { version = "0.47.0", path = "./crates/ibc-core/ics04-channel/types", default-features = false }
ibc-core-connection-types = { version = "0.47.0", path = "./crates/ibc-core/ics03-connection/types", default-features = false }
ibc-core-commitment-types = { version = "0.47.0", path = "./crates/ibc-core/ics23-commitment/types", default-features = false }
ibc-core-host-tendermint  = { version = "0.47.0", path = "./crates/ibc-core/ics24-host/tendermint", default-features = false }
ibc-core-host-types       = { version = "0.47.0", path = "./crates/ibc-core/ics24-host/types", default-features = false }
ibc-core-handler-types    = { version = "0.47.0", path = "./crates/ibc-core/ics25-handler/types", default-features = false }
ibc-core-router-types     = { version = "0.47.0", path = "./crates/ibc-core/ics26-routing/types", default-features = false }
ibc-app-transfer-types    = { version = "0.47.0", path = "./crates/ibc-apps/ics20-transfer/types", default-features = false }

ibc-proto = { version = "0.38.0", default-features = false }
ics23     = { version = "0.11", default-features = false }

# cosmos dependencies
tendermint                       = { version = "0.34.0", default-features = false }
tendermint-light-client          = { version = "0.34.0", default-features = false }
tendermint-light-client-verifier = { version = "0.34.0", default-features = false }
tendermint-proto                 = { version = "0.34.0", default-features = false }
tendermint-rpc                   = { version = "0.34.0", default-features = false }
tendermint-testgen               = { version = "0.34.0", default-features = false }

# parity dependencies
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["full"] }
scale-info         = { version = "2.10.0", default-features = false, features = ["derive"] }
