[workspace]
resolver = "2"
members = [
    "ibc",
    "ibc-data-types",
    "ibc-primitives",
    "ibc-core",
    "ibc-clients",
    "ibc-apps",
    "ibc-testkit",
    "ibc-query",
    "ibc-derive",
    "ibc-core/ics02-client",
    "ibc-core/ics02-client/types",
    "ibc-core/ics03-connection",
    "ibc-core/ics03-connection/types",
    "ibc-core/ics04-channel",
    "ibc-core/ics04-channel/types",
    "ibc-core/ics23-commitment/types",
    "ibc-core/ics24-host",
    "ibc-core/ics24-host/types",
    "ibc-core/ics24-host/cosmos",
    "ibc-core/ics25-handler",
    "ibc-core/ics25-handler/types",
    "ibc-core/ics26-routing",
    "ibc-core/ics26-routing/types",
    "ibc-clients/ics07-tendermint",
    "ibc-clients/ics07-tendermint/types",
    "ibc-apps/ics20-transfer",
    "ibc-apps/ics20-transfer/types",
]
exclude = [
    "ci/cw-check",
    "ci/no-std-check",
]

[workspace.package]
version      = "0.47.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.64"
readme       = "README.md"
repository   = "https://github.com/cosmos/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]

[workspace.dependencies]
# external dependencies
borsh               = { version = "0.10", default-features = false }
bytes               = { version = "1.5.0", default-features = false }
displaydoc          = { version = "0.2", default-features = false }
derive_more         = { version = "0.99.17", default-features = false, features = ["from", "into", "display", "try_into"] }
num-traits          = { version = "0.2.17", default-features = false }
primitive-types     = { version = "0.12.2", default-features = false, features = ["serde_no_std"] }
prost               = { version = "0.12", default-features = false }
rstest              = "0.18.2"
schemars            = { version = "0.8.15" }
sha2                = { version = "0.10.8", default-features = false }
serde               = { version = "1.0", default-features = false }
serde_json          = { package = "serde-json-wasm", version = "1.0.0" , default-features = false }
subtle-encoding     = { version = "0.5", default-features = false }
time                = { version = ">=0.3.0, <0.3.31", default-features = false }

# ibc dependencies
ibc                 = { version = "0.47.0", path = "./ibc", default-features = false }
ibc-core            = { version = "0.47.0", path = "./ibc-core", default-features = false }
ibc-clients         = { version = "0.47.0", path = "./ibc-clients", default-features = false }
ibc-apps            = { version = "0.47.0", path = "./ibc-apps", default-features = false }
ibc-primitives      = { version = "0.47.0", path = "./ibc-primitives", default-features = false }
ibc-testkit         = { version = "0.47.0", path = "./ibc-testkit" }
ibc-derive          = { version = "0.3.0", path = "./ibc-derive" }

ibc-core-client       = { version = "0.47.0", path = "./ibc-core/ics02-client", default-features = false }
ibc-core-connection   = { version = "0.47.0", path = "./ibc-core/ics03-connection", default-features = false }
ibc-core-channel      = { version = "0.47.0", path = "./ibc-core/ics04-channel", default-features = false }
ibc-core-host         = { version = "0.47.0", path = "./ibc-core/ics24-host", default-features = false }
ibc-core-handler      = { version = "0.47.0", path = "./ibc-core/ics25-handler", default-features = false }
ibc-core-router       = { version = "0.47.0", path = "./ibc-core/ics26-routing", default-features = false }
ibc-client-tendermint = { version = "0.47.0", path = "./ibc-clients/ics07-tendermint", default-features = false }
ibc-app-transfer      = { version = "0.47.0", path = "./ibc-apps/ics20-transfer", default-features = false }

ibc-core-client-context     = { version = "0.47.0", path = "./ibc-core/ics02-client/context", default-features = false }
ibc-core-client-types       = { version = "0.47.0", path = "./ibc-core/ics02-client/types", default-features = false }
ibc-core-channel-types      = { version = "0.47.0", path = "./ibc-core/ics04-channel/types", default-features = false }
ibc-core-connection-types   = { version = "0.47.0", path = "./ibc-core/ics03-connection/types", default-features = false }
ibc-core-commitment-types   = { version = "0.47.0", path = "./ibc-core/ics23-commitment/types", default-features = false }
ibc-core-host-cosmos        = { version = "0.47.0", path = "./ibc-core/ics24-host/cosmos", default-features = false }
ibc-core-host-types         = { version = "0.47.0", path = "./ibc-core/ics24-host/types", default-features = false }
ibc-core-handler-types      = { version = "0.47.0", path = "./ibc-core/ics25-handler/types", default-features = false }
ibc-core-router-types       = { version = "0.47.0", path = "./ibc-core/ics26-routing/types", default-features = false }
ibc-client-tendermint-types = { version = "0.47.0", path = "./ibc-clients/ics07-tendermint/types", default-features = false }
ibc-app-transfer-types      = { version = "0.47.0", path = "./ibc-apps/ics20-transfer/types", default-features = false }

ibc-proto = { version = "0.38.0", default-features = false }
ics23     = { version = "0.11", default-features = false }

# cosmos dependencies
tendermint                       = { version = "0.34.0", default-features = false }
tendermint-light-client          = { version = "0.34.0", default-features = false }
tendermint-light-client-verifier = { version = "0.34.0", default-features = false }
tendermint-proto                 = { version = "0.34.0", default-features = false }
tendermint-rpc                   = { version = "0.34.0", default-features = false }
tendermint-testgen               = { version = "0.34.0", default-features = false }

# parity dependencies
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["full"] }
scale-info         = { version = "2.10.0", default-features = false, features = ["derive"] }
