[workspace]
members = [
  "ibc-clients/cw-context",
  "ibc-clients/ics07-tendermint/cw-contract",
]

[dependencies]
cosmwasm-std = "2.1.0"

# ibc dependencies
ibc                      = { workspace = true }
ibc-client-cw            = { workspace = true }
ibc-client-tendermint-cw = { workspace = true }
