[workspace]
members = [
    "ibc-clients/cw-context",
    "ibc-clients/ics07-tendermint/cw-contract",
]

[workspace.package]
version      = "0.53.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.75.0"
readme       = "README.md"
repository   = "https://github.com/cosmos/ibc-rs"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
prost      = { version = "0.12", default-features = false }
serde      = { version = "1.0", default-features = false }
serde-json = { package = "serde-json-wasm", version = "1.0.1", default-features = false }

# cosmwasm dependencies
cosmwasm-std    = { version = "2.1.0", default-features = false, features = [ "std" ] }
cosmwasm-schema = { version = "2.1.0", default-features = false }

# ibc dependencies
ibc-core                 = { version = "0.53.0", path = "./../ibc-core", default-features = false }
ibc-client-cw            = { version = "0.53.0", path = "./ibc-clients/cw-context", default-features = false }
ibc-client-tendermint-cw = { version = "0.53.0", path = "./ibc-clients/ics07-tendermint", default-features = false }
ibc-client-wasm-types    = { version = "0.53.0", path = "./../ibc-clients/ics08-wasm/types", default-features = false }
