[package]
name         = "ibc-eureka-core"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = [ "blockchain", "cosmos", "ibc", "core" ]
readme       = "README.md"

description = """
    Maintained by `ibc-rs`, re-exports a comprehensive set of libraries that implement IBC core (TAO)
    modules, facilitating seamless integration of IBC core business logic into any blockchain system.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
ibc-eureka-core-client = { workspace = true }
# ibc-eureka-core-connection       = { workspace = true }
ibc-eureka-core-channel          = { workspace = true }
ibc-eureka-core-commitment-types = { workspace = true }
ibc-eureka-core-host             = { workspace = true }
ibc-eureka-core-router           = { workspace = true }
ibc-eureka-core-handler          = { workspace = true }
ibc-derive                       = { workspace = true }
ibc-primitives                   = { workspace = true }

[features]
default = [ "std" ]
std = [
  "ibc-eureka-core-client/std",
  # "ibc-eureka-core-connection/std",
  "ibc-eureka-core-channel/std",
  "ibc-eureka-core-commitment-types/std",
  "ibc-eureka-core-host/std",
  "ibc-eureka-core-router/std",
  "ibc-eureka-core-handler/std",
  "ibc-primitives/std",
]
serde = [
  "ibc-eureka-core-client/serde",
  # "ibc-eureka-core-connection/serde",
  "ibc-eureka-core-channel/serde",
  "ibc-eureka-core-commitment-types/serde",
  "ibc-eureka-core-host/serde",
  "ibc-eureka-core-router/serde",
  "ibc-eureka-core-handler/serde",
  "ibc-primitives/serde",
]
borsh = [
  "ibc-eureka-core-client/borsh",
  # "ibc-eureka-core-connection/borsh",
  "ibc-eureka-core-channel/borsh",
  "ibc-eureka-core-commitment-types/borsh",
  "ibc-eureka-core-host/borsh",
  "ibc-eureka-core-router/borsh",
  "ibc-eureka-core-handler/borsh",
  "ibc-primitives/borsh",
]
schema = [
  "ibc-eureka-core-client/schema",
  # "ibc-eureka-core-connection/schema",
  "ibc-eureka-core-channel/schema",
  "ibc-eureka-core-commitment-types/schema",
  "ibc-eureka-core-host/schema",
  "ibc-eureka-core-router/schema",
  "ibc-eureka-core-handler/schema",
  "ibc-primitives/schema",
  "serde",
  "std",
]
parity-scale-codec = [
  "ibc-eureka-core-client/parity-scale-codec",
  # "ibc-eureka-core-connection/parity-scale-codec",
  "ibc-eureka-core-channel/parity-scale-codec",
  "ibc-eureka-core-commitment-types/parity-scale-codec",
  "ibc-eureka-core-host/parity-scale-codec",
  "ibc-eureka-core-router/parity-scale-codec",
  "ibc-eureka-core-handler/parity-scale-codec",
  "ibc-primitives/parity-scale-codec",
]
