[package]
name         = "ibc-query"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = "README.md"
keywords     = ["blockchain", "cosmos", "ibc", "rpc", "grpc"]
description  = """
    Maintained by `ibc-rs`, contains essential IBC query methods and
    gRPC query service implementations for the IBC core.
"""

[dependencies]
# external dependencies
displaydoc = { version = "0.2", default-features = false }
tonic = "0.11"

# ibc dependencies
ibc = { workspace = true }
ibc-proto = { workspace = true, features = ["server"] }

[features]
default = ["std"]
std = ["ibc-proto/std", "ibc/std"]
